--- a/melon-property-tests/melon-property-tests.cabal
+++ b/melon-property-tests/melon-property-tests.cabal
@@ -17,9 +17,12 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     Melon.ABI.Fund
+                       Melon.External
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.10 && <4.11
+                     , process
+                     , safe-exceptions
                      , web3 >=0.7.1 && <0.8
   hs-source-dirs:      lib
   default-language:    Haskell2010
