--- a/melon-property-tests/melon-property-tests.cabal
+++ b/melon-property-tests/melon-property-tests.cabal
@@ -33,5 +33,8 @@ executable melon-property-tests
   -- other-extensions:
   build-depends:       base >=4.10 && <4.11
                      , hedgehog >=0.5.3 && <0.6
+                     , melon-property-tests
+                     , path
+                     , path-io
   hs-source-dirs:      app
   default-language:    Haskell2010
