Pass smart-contract directory in Config

--- a/melon-property-tests/melon-property-tests.cabal
+++ b/melon-property-tests/melon-property-tests.cabal
@@ -21,6 +21,7 @@ library
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.10 && <4.11
+                     , path
                      , process
                      , safe-exceptions
                      , web3 >=0.7.1 && <0.8
