--- a/melon/melon.cabal
+++ b/melon/melon.cabal
@@ -21,6 +21,11 @@ library
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.10 && <4.11
+                     , aeson
+                     , aeson-casing
+                     , bytestring
+                     , lens
+                     , lens-aeson
                      , path
                      , process
                      , safe-exceptions
@@ -31,9 +36,11 @@ library
 executable melon-property-tests
   main-is:             Main.hs
   build-depends:       base >=4.10 && <4.11
+                     , data-default
                      , hedgehog >=0.5.3 && <0.6
                      , melon
                      , path
                      , path-io
+                     , web3 >=0.7.1 && <0.8
   hs-source-dirs:      app
   default-language:    Haskell2010
