--- a/melon/melon.cabal
+++ b/melon/melon.cabal
@@ -30,6 +30,7 @@ library
                      , process
                      , safe-exceptions
                      , web3 >=0.7.1 && <0.8
+  ghc-options:         -Wall
   hs-source-dirs:      lib
   default-language:    Haskell2010
 
@@ -42,5 +43,6 @@ executable melon-property-tests
                      , path
                      , path-io
                      , web3 >=0.7.1 && <0.8
+  ghc-options:         -Wall -threaded
   hs-source-dirs:      app
   default-language:    Haskell2010
