--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = smart-contracts
 	url = https://github.com/melonproject/smart-contracts.git
 	branch = develop
+[submodule "hs-web3"]
+	path = hs-web3
+	url = https://github.com/airalab/hs-web3
