Add URI and path to external

--- a/melon/melon.cabal
+++ b/melon/melon.cabal
@@ -30,6 +30,7 @@ library
                      , lens
                      , lens-aeson
                      , path
+                     , path-io
                      , process
                      , safe-exceptions
                      , web3 >=0.7.1 && <0.8
