--- a/melon/melon.cabal
+++ b/melon/melon.cabal
@@ -27,6 +27,7 @@ library
                      , aeson
                      , aeson-casing
                      , bytestring
+                     , data-default
                      , lens
                      , lens-aeson
                      , path
@@ -43,12 +44,14 @@ executable melon-property-tests
   build-depends:       base >=4.10 && <4.11
                      , aeson
                      , aeson-pretty
+                     , async
                      , bytestring
                      , data-default
                      , hedgehog >=0.5.3 && <0.6
                      , lens
                      , lens-aeson
                      , melon
+                     , mtl
                      , path
                      , path-io
                      , unordered-containers
