Implement test of share-price invariant

--- a/melon/melon.cabal
+++ b/melon/melon.cabal
@@ -60,6 +60,7 @@ library
                      , lens
                      , lens-aeson
                      , memory
+                     , mmorph
                      , mtl
                      , path
                      , path-io
