--- a/melon/melon.cabal
+++ b/melon/melon.cabal
@@ -54,6 +54,7 @@ library
                      , containers
                      , cryptocompare
                      , data-default
+                     , decimal-arithmetic
                      , file-embed
                      , generics-sop
                      , hedgehog >=0.5.3 && <0.6
@@ -66,10 +67,13 @@ library
                      , path-io
                      , process
                      , safe-exceptions
+                     , scientific
                      , template-haskell
                      , text
                      , transformers
+                     , unordered-containers
                      , web3 >=0.7.1 && <0.8
+                     , wreq
   ghc-options:         -Wall
   hs-source-dirs:      lib
   default-language:    Haskell2010
