--- a/melon/melon.cabal
+++ b/melon/melon.cabal
@@ -41,7 +41,6 @@ library
                        Melon.Contract.PriceFeed
                        Melon.Contract.TermsAndConditions
                        Melon.Contract.Version
-                       Melon.Deploy
                        Melon.Model
                        Melon.Test.Commands
                        Melon.Test.Model
@@ -63,6 +62,7 @@ library
                      , file-embed
                      , generics-sop
                      , hedgehog >=0.5.3 && <0.6
+                     , http-client
                      , lens
                      , lens-aeson
                      , memory
